Possible fix for fixing scalings on Firefox Mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,34 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: DejaVu Sans, Arial, Helvetica, sans-serif;
   color: #c0c0c0;
-  background: url('/NJBG.jpg') no-repeat center center fixed;
   background-size: cover;
 }
+
+@media (min-width:600px) {
+  body {
+    padding: 0;
+    margin: 0;
+    font-family: DejaVu Sans, Arial, Helvetica, sans-serif;
+    color: #c0c0c0;
+    background: url('/NJBG.jpg') no-repeat center center fixed;
+    background-size: cover;
+  }
+}
+
+
+@media only screen and (max-width: 600px) {
+  body {
+    padding: 0;
+    margin: 0;
+    background-image: url('/NJBG.jpg');
+    min-height: 100vh;
+    min-width: 100vw;
+    background-size: fixed;
+    background-position: center center;    
+    background-repeat: no-repeat;
+  }
+}
+
 
 a {
   color: inherit;
